# HappyBees

./: .gitignore  ARCHITECTURE.md  Containerfile  LICENSE  ML_MODEL_GUIDE.md  QUICKSTART.md  README.md  TheWhy.md  audio_capture.py  podman-compose.yml  pyproject.toml  requirements.txt  test_features.py
backend/: __init__.py  main.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  commands.py  inference.py  logs.py  telemetry.py
backend/assets/: style.css
backend/dashboard/: __init__.py  app.py
backend/scripts/: configure_device.py  mock_stream.py
beewatch-release/: .gitignore  Containerfile.backend  LICENSE
beewatch-release/backend/: pyproject.toml  requirements.txt
beewatch-release/firmware/: CMakeLists.txt
beewatch-release/firmware/source/: config.h  flash_config.h  lwipopts.h  main.cpp
beewatch-release/tools/: parity_diagnostic.py  requirements.txt
docs/: ARCHITECTURE.md  ML_MODEL_GUIDE.md  WIRING.md
firmware/: CMakeLists.txt
firmware/mode_summer/model-parameters/: model_metadata.h
firmware/mode_summer/tflite-model/: tflite-resolver.h  tflite_learn_835586_26.h  tflite_learn_835586_26.tflite
firmware/model-parameters/: model_variables.h
firmware/source/: bee_preprocess.h  config.h  flash_config.h  lwipopts.h  main.cpp
tools/: audio_capture.py  configure_device.py  mac_shim.py  parity_diagnostic.py  test_features.py
training/: train_summer.py  train_winter.py
